crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__terminators-question.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Question-variant terminators: interrupted question (+/?),",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "self-interrupted question (+//?), trailing off question (+..?),",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "broken question (+!?)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: interrupted_question, self_interrupted_question,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "trailing_off_question, broken_question",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "kind",
              "content": [
                {
                  "content": "kind",
                  "type": "text"
                }
              ],
              "raw_text": "kind",
              "type": "word"
            },
            {
              "cleaned_text": "of",
              "content": [
                {
                  "content": "of",
                  "type": "text"
                }
              ],
              "raw_text": "of",
              "type": "word"
            },
            {
              "cleaned_text": "things",
              "content": [
                {
                  "content": "things",
                  "type": "text"
                }
              ],
              "raw_text": "things",
              "type": "word"
            },
            {
              "cleaned_text": "would",
              "content": [
                {
                  "content": "would",
                  "type": "text"
                }
              ],
              "raw_text": "would",
              "type": "word"
            },
            {
              "cleaned_text": "they",
              "content": [
                {
                  "content": "they",
                  "type": "text"
                }
              ],
              "raw_text": "they",
              "type": "word"
            },
            {
              "cleaned_text": "have",
              "content": [
                {
                  "content": "have",
                  "type": "text"
                }
              ],
              "raw_text": "have",
              "type": "word"
            },
            {
              "cleaned_text": "in",
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "interruptedquestion"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "maybe",
              "content": [
                {
                  "content": "maybe",
                  "type": "text"
                }
              ],
              "raw_text": "maybe",
              "type": "word"
            },
            {
              "cleaned_text": "blocks",
              "content": [
                {
                  "content": "blocks",
                  "type": "text"
                }
              ],
              "raw_text": "blocks",
              "type": "word"
            },
            {
              "cleaned_text": "and",
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "type": "word"
            },
            {
              "cleaned_text": "stuff",
              "content": [
                {
                  "content": "stuff",
                  "type": "text"
                }
              ],
              "raw_text": "stuff",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "were",
              "content": [
                {
                  "content": "were",
                  "type": "text"
                }
              ],
              "raw_text": "were",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            },
            {
              "cleaned_text": "going",
              "content": [
                {
                  "content": "going",
                  "type": "text"
                }
              ],
              "raw_text": "going",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "say",
              "content": [
                {
                  "content": "say",
                  "type": "text"
                }
              ],
              "raw_text": "say",
              "type": "word"
            },
            {
              "cleaned_text": "about",
              "content": [
                {
                  "content": "about",
                  "type": "text"
                }
              ],
              "raw_text": "about",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "self_interrupted_question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "forgot",
              "content": [
                {
                  "content": "forgot",
                  "type": "text"
                }
              ],
              "raw_text": "forgot",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "anything",
              "content": [
                {
                  "content": "anything",
                  "type": "text"
                }
              ],
              "raw_text": "anything",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            },
            {
              "cleaned_text": "have",
              "content": [
                {
                  "content": "have",
                  "type": "text"
                }
              ],
              "raw_text": "have",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "do",
              "content": [
                {
                  "content": "do",
                  "type": "text"
                }
              ],
              "raw_text": "do",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "belong",
              "content": [
                {
                  "content": "belong",
                  "type": "text"
                }
              ],
              "raw_text": "belong",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "club",
              "content": [
                {
                  "content": "club",
                  "type": "text"
                }
              ],
              "raw_text": "club",
              "type": "word"
            },
            {
              "cleaned_text": "or",
              "content": [
                {
                  "content": "or",
                  "type": "text"
                }
              ],
              "raw_text": "or",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "trailing_off_question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "no",
              "content": [
                {
                  "content": "no",
                  "type": "text"
                }
              ],
              "raw_text": "no",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            },
            {
              "cleaned_text": "just",
              "content": [
                {
                  "content": "just",
                  "type": "text"
                }
              ],
              "raw_text": "just",
              "type": "word"
            },
            {
              "cleaned_text": "go",
              "content": [
                {
                  "content": "go",
                  "type": "text"
                }
              ],
              "raw_text": "go",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "but",
              "content": [
                {
                  "content": "but",
                  "type": "text"
                }
              ],
              "raw_text": "but",
              "type": "word"
            },
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "if",
              "content": [
                {
                  "content": "if",
                  "type": "text"
                }
              ],
              "raw_text": "if",
              "type": "word"
            },
            {
              "cleaned_text": "they",
              "content": [
                {
                  "content": "they",
                  "type": "text"
                }
              ],
              "raw_text": "they",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "brokenquestion"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
