crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__terminators-quote-and-special.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Quote terminators and special terminators:",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "quoted next (+\"/.), quoted follows (+\".),",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "quoted period simple (+\".)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: quoted_new_line, quoted_period_simple",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "and",
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "type": "word"
            },
            {
              "cleaned_text": "then",
              "content": [
                {
                  "content": "then",
                  "type": "text"
                }
              ],
              "raw_text": "then",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "little",
              "content": [
                {
                  "content": "little",
                  "type": "text"
                }
              ],
              "raw_text": "little",
              "type": "word"
            },
            {
              "cleaned_text": "bear",
              "content": [
                {
                  "content": "bear",
                  "type": "text"
                }
              ],
              "raw_text": "bear",
              "type": "word"
            },
            {
              "cleaned_text": "said",
              "content": [
                {
                  "content": "said",
                  "type": "text"
                }
              ],
              "raw_text": "said",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "quoted_new_line"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "please",
              "content": [
                {
                  "content": "please",
                  "type": "text"
                }
              ],
              "raw_text": "please",
              "type": "word"
            },
            {
              "cleaned_text": "give",
              "content": [
                {
                  "content": "give",
                  "type": "text"
                }
              ],
              "raw_text": "give",
              "type": "word"
            },
            {
              "cleaned_text": "me",
              "content": [
                {
                  "content": "me",
                  "type": "text"
                }
              ],
              "raw_text": "me",
              "type": "word"
            },
            {
              "cleaned_text": "all",
              "content": [
                {
                  "content": "all",
                  "type": "text"
                }
              ],
              "raw_text": "all",
              "type": "word"
            },
            {
              "cleaned_text": "of",
              "content": [
                {
                  "content": "of",
                  "type": "text"
                }
              ],
              "raw_text": "of",
              "type": "word"
            },
            {
              "cleaned_text": "your",
              "content": [
                {
                  "content": "your",
                  "type": "text"
                }
              ],
              "raw_text": "your",
              "type": "word"
            },
            {
              "cleaned_text": "honey",
              "content": [
                {
                  "content": "honey",
                  "type": "text"
                }
              ],
              "raw_text": "honey",
              "type": "word"
            }
          ],
          "linkers": [
            {
              "type": "quotation_follows"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "little",
              "content": [
                {
                  "content": "little",
                  "type": "text"
                }
              ],
              "raw_text": "little",
              "type": "word"
            },
            {
              "cleaned_text": "bear",
              "content": [
                {
                  "content": "bear",
                  "type": "text"
                }
              ],
              "raw_text": "bear",
              "type": "word"
            },
            {
              "cleaned_text": "said",
              "content": [
                {
                  "content": "said",
                  "type": "text"
                }
              ],
              "raw_text": "said",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "quoted_period_simple"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
